Fix hamburger menu on small screens

--- a/tm_cm.css
+++ b/tm_cm.css
@@ -31,6 +31,13 @@
   font-style:italic;
 }
 
+.fa-bars {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+}
+
 /* W3.CSS 4.13 June 2019 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
